<resources>
    <string name="app_name">Poket Expence</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_fragment">Home</string>
    <string name="quicksummary_fragment">QuickSummary</string>
    <string name="textViewDate">Date:</string>
    <string name="toggle_income">Income</string>
    <string name="toggle_expense">Expense</string>
    <string name="input_category">Select Category</string>
    <string name="hint_amount">0</string>
    <string name="txt_payee">Payee</string>
    <string name="input_note">Note</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="nav_report">Reports</string>
    <string name="reportByInEx">Report By Income/Expense</string>
    <string name="reportByCategory">Report with Category</string>

    <string name="reportByMonth">Report By Month</string>
    <string name="lbl_category">Cateogry</string>
    <string name="img_content">AddButton</string>
    <string name="input_amount">Amount</string>
    <string name="input_payee">Payee</string>
    <string name="input_datepicker">Date</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_edit">Edit</string>
    <string name="textViewTransaction">Transaction:</string>
    <string name="selectCategories">Select Category</string>
    <string name="textViewFilterDate">Date:</string>
    <string name="nav_settings">အမ်ိုးအစားမ်ား</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories_fragment">Categories</string>
    <string name="btn_add">Add</string>
    <string name="addCategories">Add New Category</string>
</resources>
