<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_border"
    android:layout_margin="10dp">

    <belka.us.androidtoggleswitch.widgets.ToggleSwitch
        android:id="@+id/toggleSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        custom:activeBgColor="@android:color/holo_blue_dark"
        custom:activeTextColor="@android:color/white"
        custom:inactiveBgColor="@android:color/white"
        custom:inactiveTextColor="@android:color/black"
        custom:separatorColor="@color/gray_very_light"
        custom:textToggleLeft="@string/toggle_income"
        custom:textToggleRight="@string/toggle_expense"
        custom:toggleWidth="90dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_10dp"/>

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/textViewDate"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/lbl_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSwitch"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:padding="@dimen/dimen_10dp"
        />

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_category"
        app:layout_constraintRight_toLeftOf="@+id/img_add"
        app:layout_constraintTop_toBottomOf="@+id/toggleSwitch"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:padding="@dimen/dimen_10dp"
        android:drawableEnd="@drawable/ic_downarrow"
        android:drawablePadding="10dp"
        />

    <ImageView
        android:id="@+id/img_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_date"
        android:src="@drawable/ic_add_24dp"
        android:contentDescription="@string/img_content"
        android:layout_marginTop="12dp"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginEnd="8dp"
        />

    <TextView
        android:id="@+id/lbl_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbl_category"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginStart="8dp"
        android:text="@string/input_amount"
        />

    <EditText
        android:id="@+id/edt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/txt_category"
        app:layout_constraintStart_toStartOf="@+id/txt_category"
        android:layout_marginTop="8dp"
        android:padding="@dimen/dimen_10dp"
        />
    <TextView
        android:id="@+id/lbl_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbl_amount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginStart="8dp"
        android:text="@string/input_datepicker"
        />

    <TextView
        android:id="@+id/txt_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        app:layout_constraintTop_toBottomOf="@+id/edt_amount"
        app:layout_constraintStart_toStartOf="@+id/txt_category"
        android:layout_marginTop="8dp"
        android:padding="@dimen/dimen_10dp"
        />


    <TextView
        android:id="@+id/lbl_payee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbl_datepicker"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginStart="8dp"
        android:text="@string/input_payee"
        />

    <EditText
        android:id="@+id/edt_payee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_datepicker"
        app:layout_constraintStart_toStartOf="@+id/txt_category"
        android:padding="@dimen/dimen_10dp"
        />

    <TextView
        android:id="@+id/lbl_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbl_payee"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginStart="8dp"
        android:text="@string/input_note"
        />

    <EditText
        android:id="@+id/edt_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="8"
        android:minLines="3"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/edt_payee"
        app:layout_constraintStart_toStartOf="@+id/txt_category"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/edt_note"
        app:layout_constraintRight_toLeftOf="@+id/btn_save"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        app:layout_constraintTop_toBottomOf="@+id/edt_note"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        />


</android.support.constraint.ConstraintLayout>